trying to fix alignment on my calc

--- a/tip-calc/css/styles.css
+++ b/tip-calc/css/styles.css
@@ -353,6 +353,14 @@ body{
       padding-top: 9px;
       padding-left: 0em;
     }
+    .width-100 {
+      width: 100%;
+    }
+    .fill{
+      width: 100%;
+      height: 5px;
+      border: 1px solid red;
+    }
   }
   
   
@@ -433,6 +441,7 @@ body{
       width: 65%;
       padding: 5px 5px 10px 5px;
     }
+    
   }
   
   
